Refactor LS package loader test